--- a/arcms/src/main/webapp/WEB-INF/template/permission/resourceList.vm
+++ b/arcms/src/main/webapp/WEB-INF/template/permission/resourceList.vm
@@ -12,7 +12,7 @@
             async: {
                 type: "get",
                 enable: true,
-                url: "admin/resourceTreeList",
+                url: "${rc.contextPath}/admin/resourceTreeList",
                 autoParam: ["id=id", "resourceId=resourceId", "name=n", "level=lv"],
                 otherParam: {"otherParam": "zTreeAsyncTest"}
             },
