--- a/arcms/src/main/webapp/WEB-INF/template/permission/login.vm
+++ b/arcms/src/main/webapp/WEB-INF/template/permission/login.vm
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>爱卡后台管理系统</title>
+    <title>讯略后台管理系统</title>
     <link href="${rc.contextPath}/media/css/login/login.css" rel="stylesheet" type="text/css" />
     <script src="${rc.contextPath}/media/js/jquery-2.0.3.min.js"  language="javascript"></script>
     <script src="${rc.contextPath}/media/js/login/cloud.js" type="text/javascript"></script>
@@ -28,16 +28,16 @@
 
 
 <div class="logintop">
-    <span>欢迎登录爱卡后台管理系统</span>
+    <span>欢迎登录讯略后台管理系统</span>
 </div>
 
 
 <div class="loginbody">
 
     <span class="systemlogo"></span>
-    <form action="${rc.contextPath}/doLogin" method="post">
+    <form action="${rc.contextPath}/admin/doLogin" method="post">
     <div class="login">
-        <input class="login_name" name="userName" type="text"  placeholder="用户名/手机号码"/>
+        <input class="login_name" name="userNo" otype="text"  placeholder="用户名/手机号码"/>
         <input class="login_pw" name="password" type="password"  placeholder="密码"/>
         <!--<div class="login_other"><label><input type="checkbox" class="vm mr5" />记住密码</div>-->
         <input class="btn_login" type="submit" value="登陆">
@@ -46,7 +46,7 @@
 </div>
 
 
-<div class="loginbm pstBtn">Copyright © 2015, <a href="#">suniusoft.com</a>, All Rights Reserved</div>
+<div class="loginbm pstBtn">Copyright © 2016, <a href="#">suniusoft.com</a>, All Rights Reserved</div>
 
 
 
